Fix word wrap

--- a/assets/style/vtexlab.less
+++ b/assets/style/vtexlab.less
@@ -22,13 +22,11 @@ body {
 
 .reveal{
   h1, h2, h3, h4, p, span {
+    word-wrap: normal;
     .proxima;
   }
   h1, h2, h3, h4{
     font-weight: bold;
-  }
-  h1 {
-    font-size: 3.6em;
   }
 }
 
